style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:ital,wght@0,100;0,400;0,500;1,500&display=swap');

html {
    scroll-behavior: smooth;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Montserrat", sans-serif;
}

.text-light {
    color: #FFF;
}

#container {
    width: 100%;
    height: 90dvh;
    display: flex;
    flex-direction: column;
    gap: 100px;
    overflow: hidden;
}

#bg-video {
    position: absolute;
    margin: auto;
    width: 100%;
    height: 100%;

    background: #fff;

    overflow: hidden;
    clip-path: 0 0;
    z-index: -1;
    top: -100px;
}

#bg-video > video {
    z-index: inherit;
    position: absolute;
    top: -100%;
    bottom: -100%;
    left: -100%;
    right: -100%;    

    margin: auto;

    /* here You can control your video height width */
    min-width: 100dvw;
    min-height: 100%;
}

header {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-evenly;
    align-items: center;
    background-color: transparent;
}

#nav-links {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    width: 35dvw;
    margin-right: 30dvw;
}

#nav-links > li::after {
    content: "";
    display: block;
    position: relative;
    width: 0;
    height: 2px;
    background-color: #F00;
    transition: .2s;
}

#nav-links > li:hover::after {
    width: 100%;
}

#nav-links > li > a {
    text-decoration: none;
}

#contact-tel > a {
    text-decoration: none;
}

#logo-outter > img {
    height: 5dvh;
    mix-blend-mode: screen;
    filter: invert(1);
}

#company-thumbnail {
    display: flex;
    gap: 5%;
    width: 100%;
    padding: 2%;
}

#thumbnail-body {
    width: 50%;
    background-color: transparent;
    padding: 5%;
    display: flex;
    gap: 30px;
    flex-direction: column;
    justify-content: space-between;
}

#company-thumbnail-header > h1 {
    font-size: 28pt;
}

#company-thumbnail-body > p {
    letter-spacing: 0.7pt;
}

#pricelist-button {
    width: 150px;
    height: 50px;
    background-color: transparent;
    border: 2px solid #F00;
    border-radius: 5px;
    transition: .4s;
}

#pricelist-button:hover{
    background-color: #F00;
    transition: .4s;
}

#services-thumbnail{
    display: flex;
    flex-direction: column;
}

#services-content{
    content: " ";
    display: grid;
    grid-template-columns: repeat(auto-fill, 225px);
    width: 100%;
    max-width: 1000px; 
    justify-content: center;
    justify-items: center; 
    column-gap: 30px;
    row-gap: 40px; 
    margin: 0 auto;
    padding: 5px;
}

.service-card-header>img{
    width: 80px;
    height: 80px;
}

#thumbnail-achievments {
    width: 50%;
    background-color: transparent;
    padding: 5% 0 5% 0;
}

#thumbnail-achievments {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-content: space-evenly;
    gap: 20px;
}

.thumbnail-achievment {
    padding: 10px;
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.thumbnail-achievment::before {
    content: "";
    background-color: red;
    height: 70px;
    width: 3px;
    display: inline-block;
    transform: translateX(-15px);
    position:absolute;
}

.thumbnail-achievment > h3 {
    font-size: 18pt;
}

/* .thumbnail-achievment:nth-child(1) > h3 {
    font-size: 24pt;
    transform: translateY(-4pt);
}

.thumbnail-achievment:nth-child(1) > p {
    transform: translateY(-6pt);
} */

#pricelist {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#pricelist-header-outter > h1 {
    font-size: 28pt;
}

#options-outter {
    display: flex;
    width: 100%;
    padding: 2% 10% 2% 10%;
    justify-content: center;
    gap: .2rem;
}

.option {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    border-radius: 10px;
    padding: 2rem;
    width: 100%;
    max-width: 16dvw;
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
}

.main-option {
    z-index: 2;
    background-color: #FFF;
    /* transform: perspective(100px) translateZ(5px); */
    transform: scale(1.05);
}

.option-thumbnail-outter {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.option-thumbnail-type-outter > h3 {
    font-size: 12pt;
    color: #F00;
    letter-spacing: 0.1pt;
}

.option-thumbnail-price-outter > span {
    font-size: 40pt;
    font-weight: 700;
    line-height: 30pt;
}

.option-thumbnail-period-outter {
    margin-top: -4pt;
}

.option-thumbnail-period-outter > span {
    font-size: 10pt;
    font-weight: 700;
}

.option-odds-list > ul {
    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.option-odds-list > ul > li {
    display: flex;
    gap: 1rem;
    font-size: 10pt;
}

.option-odds-list > ul > li > i {
    color: rgb(201, 97, 97);
    display: block;
}

.option-submission-button-outter > button {
    width: 100%;
    padding: 15pt;
    background-color: transparent;
    border: 1px solid rgb(201, 97, 97);
    border-radius: 5px;
    color: #F00;
    font-size: 16pt;
    transition: .3s;
}

.option-submission-button-outter > button:hover {
    background-color: #F00;
    color: #FFF;
    transition: .3s;
    cursor: pointer;
}

#extra-option-outter {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 45%;
}

#extra-option-outter > p {
    color: #777;
}

#extra-option-outter > a {
    color: rgb(27, 4, 110);
}

#latest-cases {
    margin: 50px;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: center;
}

#latest-cases-cards {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    gap: .5%;
}

.case {
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
    overflow: hidden;
    border-radius: 10px;
    padding: 5px;
    margin-bottom: 10px;
}

.case.type1 {
    width: 33%;
}

.case.type2 {
    width: 66%;
}

.case-photo {
    height: 100%;
    z-index: -1;
    border-radius: 10px;
    overflow: hidden;
}

.case-photo > img {
    z-index: inherit;
    position: relative;
    width: 100%;
    object-fit: cover;
    vertical-align: middle;
}

.case-content {
    position: relative;
}

.case-content-inner {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 5%;
    background-color: rgba(0,0,0,0.3);
    backdrop-filter: blur(10px);
}

.case-title {
    font-size: 16pt;
    width: 100%;
}

.case-date > span {
    font-size: 10pt;
    color: #AAA;
    font-weight: 700;
}

#show-more-cases {
    padding: 20px 70px;
    background-color: #FFF;
    border-radius: 3px;
    border: 1px solid #999;
}

#company-reviews {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8rem;
}

#reviews-tab {
    position: relative;
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
    width: 75%;
    display: flex;
    border: 1px solid #EEE;
    padding: 5%;
    padding-top: 3%;
    padding-right: 0;
    justify-content: space-between;
    border-radius: 5px;
    transition: .7s;
    background-color: #FFF;
}

#reviews-tab::before {
    content: " ";
    position: absolute;
    width: 80%;
    height: 100px;
    top: -5%;
    left: 10%;
    right: 0;
    background-color: rgba(255, 255, 255, 0.8);
    border: 1px solid #EEE;
    border-radius: 5px;
    z-index: -5;
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
}

#reviews-tab::after {
    content: " ";
    position: absolute;
    width: 60%;
    height: 100px;
    top: -10%;
    left: 20%;
    border-radius: 5px;
    border: 1px solid #EEE;
    right: 0;
    background-color: rgba(255, 255, 255, 0.8);
    z-index: -10;
    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.3);
}

#reviews-tab-content {
    width: 70%;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    border-right: 1px solid #999;
    padding-right: 3rem;
}

#review-logo > img {
    width: 25%;
}

#review-text > p {
    font-weight: 700;
    text-decoration: underline;
    font-size: 18pt;
}

#review-author > p {
    font-size: 10pt;
    color: #999;
}

#reviews-tab-pagination {
    width: 30%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5pt;
}

#reviews-pagination-current-page {
    font-size: 22pt;
}

#reviews-pagination-arrow-left > i, #reviews-pagination-arrow-right > i {
    font-size: 30pt;
    cursor: pointer;
}

#company-clients {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-top: 5rem;
}

#company-clients-header-outter {
    font-size: 26pt;
    padding: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#company-clients-body-outter {
    margin: auto;
    width: 50%;
    text-align: center;
}

#company-clients-gallery-2 {
    width: 140%;
    transform: translateX(-7%);
}


.splide__slide {
    border: 1px solid #DDD;
    border-radius: 5px;
}

